[project]
name = "nwswx"
version = "0.1.0"
description = "Get data from the National Weather Service of the United States"
authors = [
    {name = "Jon R. Fox",email = "jon.fox@drfox.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)"
]

[project.scripts]
nwswx = "nwswx.cli:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
icecream = "^2.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
